# wasschluckter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/: fuel_log.csv  odometer_log.csv
notebooks/: initial_analysis.ipynb
src/fuel_analysis/: __init__.py  __main__.py  cli.py  config.py  interpolation.py  loaders.py  metrics.py  models.py  plotting.py  reporting.py  validators.py
src/fuel_analysis/web/: __init__.py  app.py  countries.py  db.py  runserver.py  seed.py  service.py
src/fuel_analysis/web/static/: analysis.js  app.js  manifest.webmanifest  new-entry.js  styles.css  sw.js
src/fuel_analysis/web/templates/: _icons.html  analysis.html  base.html  main.html  new.html
tests/: test_interpolation.py  test_metrics.py  test_models.py  test_reporting.py  test_validation.py
