[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fuel_analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0,<3.0",
    "matplotlib>=3.7,<4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
