[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fuel_analysis"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0,<3.0",
    "matplotlib>=3.7,<4.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.5,<3.0",
]

[project.scripts]
fuel-analysis = "fuel_analysis.cli:main"
wasschluckter-web = "fuel_analysis.web.runserver:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fuel_analysis.web" = [
    "templates/*.html",
    "static/**/*",
]
